# RAG-YT

./: LICENSE  README.md  main.py  pyproject.toml
LLMInteraction/: cahtmodel_gemini.py  chatmodel_ollama.py  chatmodels.py
OutputParsers/: pydantic_output_parser.py  stroutput_parser.py  structure_output_parser.py
chains/: conditional_chain.py  parallel_chain.py  sequential_chain.py
chatbots/: chatbots.py  message_placeholder.py
structuredOutputs/: detailed_structured_output.py  pydantic_structured_output.py  structured_output.py
