[project]
name = "rag-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
